<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleText"
            style="@style/MainTextStyle"
            android:text="@string/title_text"
            android:textColor="@color/light_grey_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of"
            style="@style/ScoreViewStyle"
            android:layout_marginTop="28dp"
            android:text="@string/out_of_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="153dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#1B213A"
            android:elevation="12dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/question_text_view"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/questionTextPadding"
                android:text="@string/placeHolder"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:text="@string/ture_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/button_false"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <Button
            android:id="@+id/button_next"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <TextView
            android:id="@+id/highestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/score_value"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toBottomOf="@+id/currentScore" />

        <TextView
            android:id="@+id/currentScore"
            style="@style/ScoreViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/current_Score"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.714"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearScore"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/clear_score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>